changes in links and add more images

--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Projects</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Team</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Projects</a>
+            </li>
           </ul>
           <!-- Left links -->
         </div>
@@ -144,6 +150,27 @@
     <!-- Navbar -->
 
     <div class="container-fluid p-0">
+      <div class="row">
+        <div class="col-4">
+          <img
+            src="https://i.pinimg.com/564x/16/c0/55/16c055d9dc975a4269a18ee0535f552e.jpg"
+            alt=""
+          />
+        </div>
+
+        <div class="col-4">
+          <img
+            src="https://i.pinimg.com/564x/3c/4a/0b/3c4a0b9ba2385b1e7df0e83075340cc8.jpg"
+            alt=""
+          />
+        </div>
+        <div class="col-4">
+          <img
+            src="https://i.pinimg.com/564x/7f/9b/d9/7f9bd9988db2917cb81b74ae7a2ce8ff.jpg"
+            alt=""
+          />
+        </div>
+      </div>
       <div class="row">
         <div class="col-4">
           <img
