--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Projects</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Register</a>
+            </li>
           </ul>
           <!-- Left links -->
         </div>
